[package]
name = "deimos-bcm2835"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "deimos-bcm2835"
path = "src/main.rs"
test = false
doctest = false
bench = false

[dependencies]
bcm2835-lpa = "0.5.0"
bytemuck = "1.24.0"
critical-section = { version = "1.2.0", features = ["restore-state-u32"] }
embedded-alloc = "0.6.0"
# talc = { version = "4.4.3", features = [] }
bumpalo = { version = "3.19.0", features = ["allocator_api"] }
tock-registers = { path = "../../alchemy/tock-register-interface/tock/libraries/tock-register-interface" }
sulfur = { path = "../sulfur" }
hashbrown = { version = "0.15", features = [] }
